--- a/gdc_ml_jam/Week1StudyJam/00-TensorFlow-Basic-Syntax.ipynb
+++ b/gdc_ml_jam/Week1StudyJam/00-TensorFlow-Basic-Syntax.ipynb
@@ -8,6 +8,16 @@
    ]
   },
   {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "1.Downlaoad and install tensorflow\n",
+    "pip install tensorflow\n",
+    "2.GPU package for CUDA-enabled GPU cards\n",
+    "pip install tensorflow-gpu"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -40,7 +50,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Tensors"
+    "## Tensors\n",
+    "Tensor means vector."
    ]
   },
   {
@@ -77,12 +88,18 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tensor(\"Const:0\", shape=(), dtype=string)\n"
+     ]
+    }
+   ],
    "source": [
-    "world = tf.constant('World')"
+    "print(hello)"
    ]
   },
   {
@@ -93,27 +110,18 @@
    },
    "outputs": [],
    "source": [
-    "result = hello + world"
+    "world = tf.constant(' World')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<tf.Tensor 'add:0' shape=() dtype=string>"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
-    "result"
+    "result = hello + world"
    ]
   },
   {
@@ -124,10 +132,30 @@
     {
      "data": {
       "text/plain": [
-       "tensorflow.python.framework.ops.Tensor"
+       "<tf.Tensor 'add:0' shape=() dtype=string>"
       ]
      },
      "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensorflow.python.framework.ops.Tensor"
+      ]
+     },
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -150,16 +178,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "b'HelloWorld'"
+       "b'Hello World'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -172,7 +200,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "** Computations **"
+    "## Computations"
    ]
   },
   {
@@ -235,7 +263,7 @@
     {
      "data": {
       "text/plain": [
-       "<tensorflow.python.client.session.Session at 0x22a902b9470>"
+       "3"
       ]
      },
      "execution_count": 14,
@@ -244,7 +272,9 @@
     }
    ],
    "source": [
-    "sess"
+    "with tf.Session() as sess:\n",
+    "    result = sess.run(tensor_1 + tensor_2)\n",
+    "result"
    ]
   },
   {
@@ -268,7 +298,9 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "const = tf.constant(10)"
@@ -277,7 +309,9 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "fill_mat = tf.fill((4,4),10)"
@@ -286,56 +320,113 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[10 10 10 10]\n",
+      " [10 10 10 10]\n",
+      " [10 10 10 10]\n",
+      " [10 10 10 10]]\n"
+     ]
+    }
+   ],
    "source": [
-    "myzeros = tf.zeros((4,4))"
+    "with tf.Session() as sess:\n",
+    "    result = sess.run(fill_mat)\n",
+    "print(result)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tensor(\"zeros_3:0\", shape=(4, 4), dtype=float32)\n"
+     ]
+    }
+   ],
    "source": [
-    "myones = tf.ones((4,4))"
+    "myzeros = tf.zeros((4,4))\n",
+    "print(myzeros)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tensor(\"ones_1:0\", shape=(4, 4), dtype=float32)\n"
+     ]
+    }
+   ],
    "source": [
-    "myrandn = tf.random_normal((4,4),mean=0,stddev=0.5)"
+    "myones = tf.ones((4,4))\n",
+    "print(myones)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tensor(\"random_normal_1:0\", shape=(4, 4), dtype=float32)\n"
+     ]
+    }
+   ],
    "source": [
-    "myrandu = tf.random_uniform((4,4),minval=0,maxval=1)"
+    "myrandn = tf.random_normal((4,4),mean=0,stddev=0.5)\n",
+    "print(myrandn)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tensor(\"random_uniform_1:0\", shape=(4, 4), dtype=float32)\n"
+     ]
+    }
+   ],
    "source": [
-    "my_ops = [const,fill_mat,myzeros,myones,myrandn,myrandu]"
+    "myrandu = tf.random_uniform((4,4),minval=0,maxval=1)\n",
+    "print(myrandu)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[<tf.Tensor 'Const_4:0' shape=() dtype=int32>, <tf.Tensor 'Fill:0' shape=(4, 4) dtype=int32>, <tf.Tensor 'zeros_3:0' shape=(4, 4) dtype=float32>, <tf.Tensor 'ones_1:0' shape=(4, 4) dtype=float32>, <tf.Tensor 'random_normal_1:0' shape=(4, 4) dtype=float32>, <tf.Tensor 'random_uniform_1:0' shape=(4, 4) dtype=float32>]\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_ops = [const,fill_mat,myzeros,myones,myrandn,myrandu]\n",
+    "print(my_ops)"
    ]
   },
   {
@@ -349,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 32,
    "metadata": {
     "collapsed": true
    },
@@ -361,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -377,28 +468,28 @@
       " [10 10 10 10]]\n",
       "\n",
       "\n",
-      "[[ 0.  0.  0.  0.]\n",
-      " [ 0.  0.  0.  0.]\n",
-      " [ 0.  0.  0.  0.]\n",
-      " [ 0.  0.  0.  0.]]\n",
+      "[[0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]]\n",
       "\n",
       "\n",
-      "[[ 1.  1.  1.  1.]\n",
-      " [ 1.  1.  1.  1.]\n",
-      " [ 1.  1.  1.  1.]\n",
-      " [ 1.  1.  1.  1.]]\n",
+      "[[1. 1. 1. 1.]\n",
+      " [1. 1. 1. 1.]\n",
+      " [1. 1. 1. 1.]\n",
+      " [1. 1. 1. 1.]]\n",
       "\n",
       "\n",
-      "[[ 0.1066899  -0.67079175 -0.17030844 -0.94966197]\n",
-      " [ 0.36453074  0.07695128  0.75996757  0.26596269]\n",
-      " [ 0.09675932  0.0172567   0.61638004 -0.55172282]\n",
-      " [ 0.02814705 -0.61808312 -0.35328296  0.08349258]]\n",
+      "[[ 0.08911982  0.3129446   0.19234432  0.4658083 ]\n",
+      " [-0.66653645 -0.35466677  0.38390362 -0.05206274]\n",
+      " [-0.40131718  0.02615953  0.03541684 -0.5788311 ]\n",
+      " [-0.43288812  0.0244923   0.05884625  0.23140113]]\n",
       "\n",
       "\n",
-      "[[ 0.68672144  0.84300661  0.01917613  0.15367568]\n",
-      " [ 0.8822968   0.6406256   0.11968935  0.34425914]\n",
-      " [ 0.32183003  0.31339324  0.0376581   0.34806168]\n",
-      " [ 0.00820863  0.74296677  0.67269909  0.48290253]]\n",
+      "[[0.82177794 0.13546145 0.3224491  0.8799814 ]\n",
+      " [0.94127345 0.8278401  0.11362112 0.79106927]\n",
+      " [0.06701112 0.81288064 0.56227756 0.16688251]\n",
+      " [0.96021414 0.96349025 0.12517047 0.19781256]]\n",
       "\n",
       "\n"
      ]
@@ -419,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 46,
    "metadata": {
     "collapsed": true
    },
@@ -431,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -440,7 +531,7 @@
        "TensorShape([Dimension(2), Dimension(2)])"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -451,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 48,
    "metadata": {
     "collapsed": true
    },
@@ -462,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -471,7 +562,7 @@
        "TensorShape([Dimension(2), Dimension(1)])"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -482,8 +573,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
-   "metadata": {},
+   "execution_count": 50,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "result = tf.matmul(a,b)"
@@ -491,17 +584,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "array([[210],\n",
-       "       [430]])"
+       "       [430]], dtype=int32)"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -536,7 +629,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.4"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
